--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-native-picker/picker": "^2.9.0",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^7.0.4",
+    "@react-navigation/native-stack": "^7.1.1",
     "expo": "^52.0.7",
     "expo-av": "^15.0.1",
     "expo-camera": "~16.0.5",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
     "expo-linking": "~7.0.2",
+    "expo-location": "~18.0.2",
     "expo-router": "~4.0.6",
     "expo-speech": "^13.0.0",
     "expo-splash-screen": "~0.29.11",
@@ -37,8 +39,7 @@
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
-    "react-native-web": "~0.19.13",
-    "expo-location": "~18.0.2"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
